SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Pricing_Threshold__c/CPQ_Pricing_Threshold__c.object-meta.xml
<CustomObject>
    <description>Threshold for Pricing Set. Determines Unit Price given a min and max value for the Set&apos;s Tiering Field.</description>
    <label>CPQ Pricing Threshold</label>
    <nameField>
        <label>CPQ Pricing Threshold Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Pricing Thresholds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>