SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Pricing_Threshold__c/fields/CPQ_Pricing_Set__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Pricing_Set__c</fullName>
    <label>CPQ Pricing Set</label>
    <referenceTo>CPQ_Pricing_Set__c</referenceTo>
    <relationshipLabel>CPQ Pricing Thresholds</relationshipLabel>
    <relationshipName>CPQ_Pricing_Thresholds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>