SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Pricing_Threshold__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if threshold is active and should be enforced in CPQ</description>
    <inlineHelpText>Determines if threshold is active and should be enforced in CPQ</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>