SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Pricing_Threshold__c/fields/Lower_Bound__c.field-meta.xml
<CustomField>
    <fullName>Lower_Bound__c</fullName>
    <description>Value at which the parent Pricing Set&apos;s Tiering Field enters the threshold. If no value is provided, the lower bound is met by default.</description>
    <inlineHelpText>Value at which the parent Pricing Set&apos;s Tiering Field enters the threshold. If no value is provided, the lower bound is met by default.</inlineHelpText>
    <label>Lower Bound</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>