SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Pricing_Threshold__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>Price per unit of the parent Pricing Set&apos;s Tiering Field</description>
    <inlineHelpText>Price per unit of the parent Pricing Set&apos;s Tiering Field</inlineHelpText>
    <label>Unit Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>